--- a/res/layout/fragment_work_details.xml
+++ b/res/layout/fragment_work_details.xml
@@ -18,7 +18,8 @@
     <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 				android:id="@+id/gps_coordinates"
-				android:layout_toRightOf="@id/gps_coordinates_label" />
+				android:layout_toRightOf="@id/gps_coordinates_label"
+				android:layout_below="@id/work_order_number" />
     <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/barcode_label"
@@ -27,7 +28,8 @@
     <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/barcode_value"
-        android:layout_toRightOf="@id/barcode_label" />
+        android:layout_toRightOf="@id/barcode_label"
+        android:layout_below="@id/gps_coordinates" />
     <Button android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
